terraform/main/k8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "apty-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
            serviceName: nginx-service
            servicePort: 80
